Removed my actuals

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h3>Summary</h3>
     <ul>
         <li>Overall 20 years of experience in banking</li>       </li>
-        <li>Currently working a an Agility Lead in JP Morgan Chase</li>
+        <li>Currently working a an Agility Lead in Banking</li>
     </ul>
     <h3>Education</h3>
     <ul>
@@ -17,7 +17,7 @@
     </ul>
     <h3>Work Experience</h3>
     <ul>
-        <li>Over 11 years of experience in JP Morgan Chase</li>
+        <li>Over 20 years of experience in Banking</li>
         <li>Worked as a QA Manager before becoming Agility Lead</li>
     </ul>
     <h3>Skills</h3>
